--- a/src/assets/css/Pembayaran.css
+++ b/src/assets/css/Pembayaran.css
@@ -76,3 +76,30 @@
     color: white;
     font-family: 'Lato';
 }
+
+.modal-dialog {
+    background-color: #FBF7F0;
+    width: 300px;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.text-pembayaranBerhasil {
+    font-weight: bold;
+    text-align: center;
+}
+
+.fa {
+    color: #555555;
+}
+
+.ok-btn {
+    background-color: #555555;
+    border-radius: 10px;
+    border-style: none;
+    width: 200px;
+    height: 40px;
+    color: white;
+    font-family: 'Lato';
+    margin: 40px 30px 20px;
+}
