--- a/src/assets/css/Pembayaran.css
+++ b/src/assets/css/Pembayaran.css
@@ -49,7 +49,7 @@
     font-weight: bold;
 }
 
-.HargaJasaPengiriman {
+.JasaPengiriman {
     text-align: end;
 }
 
@@ -60,11 +60,6 @@
 .totalPembayaran {
     text-align: end;
     font-weight: bold;
-}
-
-.teks-metodePembayaran {
-    font-weight: bold;
-    margin-top: 20px;
 }
 
 .pembayaran-btn {
