--- a/src/assets/css/KeranjangPesanan.css
+++ b/src/assets/css/KeranjangPesanan.css
@@ -14,6 +14,10 @@
     margin-left: 17px;
 }
 
+.Harga {
+    color: #024E82;
+}
+
 .SubtotalPesanan {
     background-color: #FBF7F0;
     margin: 20px;
