--- a/src/assets/css/Pembayaran.css
+++ b/src/assets/css/Pembayaran.css
@@ -57,6 +57,15 @@
     font-weight: bold;
 }
 
+.metodePembayaran {
+    padding-top: 5px;
+    font-weight: bold;
+}
+
+.MetodePembayaran {
+    text-align: end;
+}
+
 .totalPembayaran {
     text-align: end;
     font-weight: bold;
@@ -66,10 +75,11 @@
     background-color: #555555;
     border-radius: 10px;
     border-style: none;
-    width: 180px;
+    width: 250px;
     height: 40px;
     color: white;
     font-family: 'Lato';
+    margin-top: 20px;
 }
 
 .modal-dialog {
